重构cache 增加 Cache工厂